-- Fix buffer logic with regard to draining, use common device writing
   code to handle resuming from pause. This fixes sdl output with buffer,
   possibly other sfifo-based outputs like CoreAudio (those were poorly
   tested with buffer, as the combination is indeed unusual).
-- Buffer pauses devices for prebuffering, to avoid underruns.
-- Fixed memory leaks with some outputs where a call to the deinit()
   function is necessary during available/working module checking.
- mpg123, out123: Use the default output flags to get OUT123_KEEP_PLAYING.
  Without this, there is a good chance to abort on SIGSTOP/CONT while playing.
  This is a regression from 1.22 .
- Build fixes (bugs 227 and 228) and some build system hackery.
  Gone are libc feature test macros in compat.h . This means always
  using our own strdup() implementation. Simpler than being bugged by
  feature test macros in strict compiler mode (when _DEFAULT_SOURCE is not
  defined).
- ./configure --enable-nagging does something also without --enable-debug,
  explictly triggers -std=c89, too (hence the above).
- Some fixup to make things work in pedantic C89 mode again.
  It really might be time to swich on some serious C99 for the next release,
  since there's a followup standard to _that_ which we can ignore now.
- Update list of renamed internal symbols to reduce conflicts during static
  linking of libmpg123 or libout123.
- Internal compatibility functions now handled via libtool convenience
  archives, avoiding the hackish code copies.

TODO: Check if bloat of modules from libcompat_str can sensibly reduced.

1.23.3:
-------
- mpg123: Man page fixes by ESR.
- Actually check for sys/select.h (again?) in configure so that it is used.
  Fixes build on a Cygwin install, at least.
- libmpg123: Always default to enabled IEEE 754 hack for rounding on all
  platforms, use ./configure --disable-ieeefloat if you do not want it.
  As a protection for the exotic machine that does not use IEEE floating